--- a/factgenie/templates/crowdsourcing/annotate_body.html
+++ b/factgenie/templates/crowdsourcing/annotate_body.html
@@ -71,13 +71,15 @@
                   <div class="ms-auto">
                     <input type="radio" class="btn-check btn-outline-secondary btn-select" name="btnradio"
                       id="btnradioselect" autocomplete="off" data-cat-idx="-2">
-                    <label class="btn btn-err-cat-label" for="btnradioselect" style="background-color: #FFF; color: #000 !important;">
-                      <i class="fa fa-mouse-pointer" aria-hidden="true"></i> Select mode
+                    <label class="btn btn-err-cat-label" for="btnradioselect"
+                      style="background-color: #FFF; color: #000 !important;">
+                      <i class="fa fa-mouse-pointer" aria-hidden="true"></i>
                     </label>
                     <input type="radio" class="btn-check btn-outline-secondary btn-eraser" name="btnradio"
                       id="btnradioeraser" autocomplete="off" data-cat-idx="-1">
-                    <label class="btn btn-err-cat-label" for="btnradioeraser" style="background-color: #FFF; color: #000 !important;">
-                      <i class="fa fa-eraser" aria-hidden="true"></i> Erase mode
+                    <label class="btn btn-err-cat-label" for="btnradioeraser"
+                      style="background-color: #FFF; color: #000 !important;">
+                      <i class="fa fa-eraser" aria-hidden="true"></i>
                     </label>
                   </div>
                 </div>
