Add explanatory labels

--- a/factgenie/templates/pages/analyze_detail.html
+++ b/factgenie/templates/pages/analyze_detail.html
@@ -103,9 +103,13 @@
               <th data-sortable="true" data-field="setup_id">Setup</th>
               <th data-sortable="true" data-field="example_count">Ex. annotated</th>
               <th data-sortable="true" data-field="annotation_type">Category</th>
-              <th data-sortable="true" data-field="ann_count" data-align="right">Count</th>
-              <th data-sortable="true" data-field="avg_count" data-align="right">Avg. per ex.</th>
-              <th data-sortable="true" data-field="prevalence" data-align="right">Prevalence</th>
+              <th data-sortable="true" data-field="ann_count" data-align="right"
+                data-title-tooltip="The total number of label occurences within annotated examples.">Count</th>
+              <th data-sortable="true" data-field="avg_count" data-align="right"
+                data-title-tooltip="The average number of label occurences within annotated examples (=Count / Ex. annotated).">
+                Avg. per ex.</th>
+              <th data-sortable="true" data-field="prevalence" data-align="right"
+                data-title-tooltip="A ratio of outputs containing the label (0 to 1 range).">Prevalence</th>
             </tr>
           </thead>
           <tbody>
@@ -121,9 +125,13 @@
             <tr>
               <th data-sortable="true" data-field="example_count">Ex. annotated</th>
               <th data-sortable="true" data-field="annotation_type">Category</th>
-              <th data-sortable="true" data-field="ann_count" data-align="right">Count</th>
-              <th data-sortable="true" data-field="avg_count" data-align="right">Avg. per ex.</th>
-              <th data-sortable="true" data-field="prevalence" data-align="right">Prevalence</th>
+              <th data-sortable="true" data-field="ann_count" data-align="right"
+                data-title-tooltip="The total number of label occurences within annotated examples.">Count</th>
+              <th data-sortable="true" data-field="avg_count" data-align="right"
+                data-title-tooltip="The average number of label occurences within annotated examples (=Count / Ex. annotated).">
+                Avg. per ex.</th>
+              <th data-sortable="true" data-field="prevalence" data-align="right"
+                data-title-tooltip="A ratio of outputs containing the label (0 to 1 range).">Prevalence</th>
             </tr>
           </thead>
           <tbody>
@@ -141,9 +149,13 @@
               <th data-sortable="true" data-field="setup_id">Setup</th>
               <th data-sortable="true" data-field="example_count">Ex. annotated</th>
               <th data-sortable="true" data-field="annotation_type">Category</th>
-              <th data-sortable="true" data-field="ann_count" data-align="right">Count</th>
-              <th data-sortable="true" data-field="avg_count" data-align="right">Avg. per ex.</th>
-              <th data-sortable="true" data-field="prevalence" data-align="right">Prevalence</th>
+              <th data-sortable="true" data-field="ann_count" data-align="right"
+                data-title-tooltip="The total number of label occurences within annotated examples.">Count</th>
+              <th data-sortable="true" data-field="avg_count" data-align="right"
+                data-title-tooltip="The average number of label occurences within annotated examples (=Count / Ex. annotated).">
+                Avg. per ex.</th>
+              <th data-sortable="true" data-field="prevalence" data-align="right"
+                data-title-tooltip="A ratio of outputs containing the label (0 to 1 range).">Prevalence</th>
             </tr>
           </thead>
           <tbody>
@@ -162,9 +174,13 @@
               <th data-sortable="true" data-field="split">Split</th>
               <th data-sortable="true" data-field="example_count">Ex. annotated</th>
               <th data-sortable="true" data-field="annotation_type">Category</th>
-              <th data-sortable="true" data-field="ann_count" data-align="right">Count</th>
-              <th data-sortable="true" data-field="avg_count" data-align="right">Avg. per ex.</th>
-              <th data-sortable="true" data-field="prevalence" data-align="right">Prevalence</th>
+              <th data-sortable="true" data-field="ann_count" data-align="right"
+                data-title-tooltip="The total number of label occurences within annotated examples.">Count</th>
+              <th data-sortable="true" data-field="avg_count" data-align="right"
+                data-title-tooltip="The average number of label occurences within annotated examples (=Count / Ex. annotated).">
+                Avg. per ex.</th>
+              <th data-sortable="true" data-field="prevalence" data-align="right"
+                data-title-tooltip="A ratio of outputs containing the label (0 to 1 range).">Prevalence</th>
             </tr>
           </thead>
           <tbody>
@@ -181,7 +197,8 @@
             <tr>
               <th data-sortable="true" data-field="label">Label</th>
               <th data-sortable="true" data-field="value">Value</th>
-              <th data-sortable="true" data-field="count">Count</th>
+              <th data-sortable="true" data-field="count"
+                data-title-tooltip="The total number of label occurences within annotated examples.">Count</th>
             </tr>
           </thead>
           <tbody>
