--- a/factgenie/static/css/custom.css
+++ b/factgenie/static/css/custom.css
@@ -1062,3 +1062,23 @@ a:hover {
     min-height: 40px;
     max-width: 40px;
 }
+
+
+/* Styling for webkit browsers */
+#annotations-select::-webkit-scrollbar {
+    height: 5px;
+}
+
+#annotations-select::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+#annotations-select::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+/* Ensure buttons stay on a single line */
+#annotations-select .btn {
+    flex-shrink: 0;
+}
