Add an option to focus and highlight campaign using an URL argument

--- a/factgenie/templates/pages/browse.html
+++ b/factgenie/templates/pages/browse.html
@@ -185,6 +185,7 @@
   window.display_example = {{ display_example | tojson | safe }};
   window.datasets = {{ datasets | tojson | safe }};
   window.highlight_setup_id = "{{ highlight_setup_id }}";
+  window.highlight_ann_campaign = "{{ highlight_ann_campaign }}";
   window.mode = "browse";
 </script>
 
