--- a/factgenie/templates/pages/llm_campaign_new.html
+++ b/factgenie/templates/pages/llm_campaign_new.html
@@ -140,6 +140,8 @@
               </div>
               {% endif %}
 
+              <hr style="margin-left: -30px; margin-right: -30px">
+
               <div class="row g-3 mb-3 align-items-center">
                 <div class="col-auto">
                   <i class="fa fa-code"></i>
@@ -156,6 +158,24 @@
                   <select class="form-select" id="metric-type" name="metric-type">
                     {% for metric_type in metric_types %}
                     <option value="{{ metric_type }}">{{ metric_type }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+
+              <div class="row g-3 mb-3 align-items-center">
+                <div class="col-auto">
+                  <i class="fa fa-code"></i>
+                  <span style="margin-left: 5px; margin-right: 10px;">API provider</span>
+                  <div class="mb-2">
+                    <small class="form-text text-muted">Select one of the available providers (or add your own class to <code>factgenie/models.py</code>) Do not forget to add the relevant API keys in the <a href="/app_config">app settings</a> or in the <code>factgenie/config/config.yml</code> file.
+                    </small>
+                  </div>
+                </div>
+                <div class="form-group mt-1">
+                  <select class="form-select" id="model-api" name="model-apis">
+                    {% for model_api in model_apis %}
+                    <option value="{{ model_api }}">{{ model_api }}</option>
                     {% endfor %}
                   </select>
                 </div>
