--- a/factgenie/templates/pages/analyze.html
+++ b/factgenie/templates/pages/analyze.html
@@ -26,10 +26,10 @@
     </h3>
 
     <div class="alert alert-info mb-4" role="alert">
-      <i class="fa fa-info-circle"></i> You can compute inter-annotator agreement metrics using
+      <i class="fa fa-info-circle"></i> You can now compute statistics and inter-annotator agreement metrics using
       the factgenie command line interface.
-      <a href="https://github.com/ufal/factgenie/wiki/CLI#-inter-annotator-agreement" target="_blank"
-        class="alert-link">Learn more</a>.
+      <a href="https://github.com/ufal/factgenie/wiki/Analyzing-Annotations" target="_blank" class="alert-link">Learn
+        more</a>.
     </div>
 
     <div class="mt-3" id="campaigns">
