--- a/factgenie/templates/pages/llm_campaign_new.html
+++ b/factgenie/templates/pages/llm_campaign_new.html
@@ -94,8 +94,10 @@
                   <i class="fa fa-comments"></i>
                   <span style="margin-left: 5px; margin-right: 10px;">Prompting strategy</span>
                   <div class="mb-2">
-                    <small class="form-text text-muted">Select one of the available prompting strategies (or add your
-                      own class to <code>factgenie/prompting/strategies/</code>—see <code>factgenie/prompting/strategies/gen_example.py</code> for example). A prompting strategy controls how the prompt will be used to obtain the output.
+                    <small class="form-text text-muted"> A prompting strategy
+                      controls how the prompt will be used to obtain the output. Keep <code>default</code> for obtaining
+                      single-pass
+                      annotations with structured JSON output.
                     </small>
                   </div>
                 </div>
