--- a/factgenie/templates/pages/llm_campaign_new.html
+++ b/factgenie/templates/pages/llm_campaign_new.html
@@ -251,9 +251,11 @@
               {% if mode == 'llm_eval' %}
               <div class="form-group mt-4 mb-3">
                 <i class="fa fa-text-width"></i>
-                <label style="margin-left: 5px; margin-right: 10px;" for="annotationGranularity">Annotation granularity</label>
+                <label style="margin-left: 5px; margin-right: 10px;" for="annotationGranularity">Annotation
+                  granularity</label>
                 <div class="mb-2">
-                  <small class="form-text text-muted">Whether the model should annotate at word or character level. Word-level
+                  <small class="form-text text-muted">Whether the model should annotate at word or character level.
+                    Word-level
                     enforces word boundaries during annotation matching.</small>
                 </div>
                 <select class="form-select" id="annotationGranularity" name="annotationGranularity">
