Enable collecting reasons from human annotators

--- a/factgenie/templates/pages/crowdsourcing_new.html
+++ b/factgenie/templates/pages/crowdsourcing_new.html
@@ -159,6 +159,16 @@
                 </div>
               </div>
               <div class="form-group mt-4">
+                <label for="annotateReason">Collect annotation reasons</label>
+                <div class="mb-2">
+                  <small class="form-text text-muted">Whether to ask annotators for a reason after each annotation
+                  </small>
+                </div>
+                <div class="form-check form-switch">
+                  <input type="checkbox" class="form-check-input" id="annotateReason" name="annotateReason">
+                </div>
+              </div>
+              <div class="form-group mt-4">
                 <!-- select for sort order -->
                 <label for="sortOrder">Output ordering</label>
                 <div class="mb-2">
